Fix footer and content collapsed

--- a/src/theme/base.scss
+++ b/src/theme/base.scss
@@ -7,7 +7,7 @@ html {
 
 body {
   background: $app-background;
-  padding-bottom: $footer-height;
+  padding-bottom: $footer-height + 55;
   min-height: 100%;
   position: relative;
 }
